moved components to /src

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       System.config({
         transpiler: 'typescript', 
         typescriptOptions: { emitDecoratorMetadata: true }, 
-        packages: {'app': {defaultExtension: 'ts'}} 
+        packages: {'src': {defaultExtension: 'ts'}} 
       });
-        System.import('app/main')
-              .then(null, console.error.bind(console));
+      System.import('src/main')
+        .then(null, console.error.bind(console));
     </script>
     
   </head>
