added channel title beneath the video title in the video result lists in the youtube-search and favorites components moved the "Clear Favorites" link to the footer nav bar updated styling re-enabled debug mode

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <!-- Load application with SystemJS -->
     <script>
-      var DEBUG = false;
+      var DEBUG = true;
     
       //use transpiler in DEBUG mode
       if (DEBUG) {
